data/derived/comb/progs/unify/prog1290.ml.out
Characters 192-211:
  | 2 -> buildAverage(build(rand,depth))
                     ^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * expr
